# k0s

./: .dockerignore  .gitignore  .golangci.yml  COPYING  Dockerfile  Makefile  README.md  compose.yml  docker-entrypoint.sh  go.mod  go.sum  main.go  mkdocs.yml  renovate.json  route-watchdog.ps1  versions.json
.github/: dependabot.yml
.github/workflows/: build-airgap-image-bundle.yml  build-docs.yml  build-image-bundle.yml  build-k0s-amd64.yml  build-k0s-docker-image.yml  build-k0s-oci-image.yml  build-k0s.yml  check-network.yaml  check-ostests.yaml  cleaner.yml  dco.yaml  (+22 more)
cmd/: root.go  root_test.go
docs/: .dockerignore  .gitignore  Dockerfile.serve-dev  Makefile  Makefile.variables  REUSE.toml  airgap-install.md  compose-cluster.yaml  compose.yaml  configuration.md  docker-shim.md  dynamic-configuration.md  external-runtime-deps.md  helm-charts.md  install.md  k0s-in-docker.md  k0s-multi-node.md  nllb.md  podsecurity.md  raspberry-pi4.md  requirements.txt  requirements_pip.txt  runtime.md  support-bundle-controller.yaml  support-bundle-worker.yaml  system-requirements.md  windows-notes.md  worker-node-config.md
embedded-bins/: Makefile  Makefile.variables
hack/: get-calico.sh  inttest-riscv64.sh  validate-images.sh
hack/demo-plugins/rust/: .gitignore  Cargo.toml  README.md
hack/demo-plugins/rust/src/: github_api_get.rs  hello_stdout.rs  lib.rs  main.rs  runtime_env.rs
head/: 404.html  index.html  sitemap.xml
image-bundle/: bundler.sh
image-bundler/: bundler.sh
inttest/: Makefile  Makefile.variables
v1.33.1+k0s.2/: 404.html  index.html  sitemap.xml
(+987 files in other folders)
